# hue4cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ROADMAP.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  generate-docs.yml
cmake/: hue4cppConfig.cmake.in
doc/: README.md  migration-guide-reactivelitepp.md  release-notes-device-support.md
doc/hueApiV2/: Application Design Guidance - Philips Hue Developer Program.html  Bridge - Maximum Settings - Philips Hue Developer Program.html  Color Conversion Formulas RGB to XY and back - Philips Hue Developer Program.html  Core Concepts - Philips Hue Developer Program.html  Create a Hue Tap Toggle Button - Philips Hue Developer Program.html  Getting started - Philips Hue Developer Program.html  Hue API V2 - Philips Hue Developer Program.html  Hue Bridge Discovery - Philips Hue Developer Program.html  Hue CLIP API.html  Hue Dimmer Switch Programming - Philips Hue Developer Program.html  Hue EDK Effect Creation - Philips Hue Developer Program.html  Hue Entertainment API - Philips Hue Developer Program.html  Hue HDMI Sync Box API - Philips Hue Developer Program.html  Hue System Performance - Philips Hue Developer Program.html  Hue Tap Scene Programming - Philips Hue Developer Program.html  LIGHT EFFECTS EXPERIENCE - GUIDE BOOK - Philips Hue Developer Program.html  Migration Guide to the new Hue API - Philips Hue Developer Program.html  Using HTTPS - Philips Hue Developer Program.html
doc/hueApiV2/Core Concepts - Philips Hue Developer Program_files/: s79180798043356
doc/hueApiV2/Getting started - Philips Hue Developer Program_files/: s75660322663879
doc/hueApiV2/Hue API V2 - Philips Hue Developer Program_files/: s7682301437747  wa_code.js.télécharger
doc/hueApiV2/Hue Bridge Discovery - Philips Hue Developer Program_files/: s76267015169873
doc/hueApiV2/Hue Tap Scene Programming - Philips Hue Developer Program_files/: style(1).css  tms_code.js.télécharger
doc/hueApiV2/Migration Guide to the new Hue API - Philips Hue Developer Program_files/: s77771570383534
doc/hueApiV2/Using HTTPS - Philips Hue Developer Program_files/: s78689990481043
docs/: README_8md.html  annotated.html  annotated_dup.js  bell__button__sensor_8cpp.html  bell__button__sensor_8cpp_source.html  bell__button__sensor_8h.html  bell__button__sensor_8h.js  bell__button__sensor_8h_source.html  bridge_8cpp.html  bridge_8cpp.js  bridge_8cpp_source.html  bridge_8h.html  bridge_8h.js  bridge_8h_source.html  button__sensor_8cpp.html  button__sensor_8cpp_source.html  button__sensor_8h.html  button__sensor_8h.js  button__sensor_8h_source.html  camera__motion__sensor_8cpp.html  camera__motion__sensor_8cpp_source.html  camera__motion__sensor_8h.html  camera__motion__sensor_8h.js  camera__motion__sensor_8h_source.html  classes.html  classhue4cpp_1_1AuthenticationException-members.html  classhue4cpp_1_1AuthenticationException.html  classhue4cpp_1_1AuthenticationException.js  classhue4cpp_1_1BellButtonSensor-members.html  classhue4cpp_1_1BellButtonSensor.html  classhue4cpp_1_1BellButtonSensor.js  classhue4cpp_1_1Bridge-members.html  classhue4cpp_1_1Bridge.html  classhue4cpp_1_1Bridge.js  classhue4cpp_1_1BridgeNotReachableException-members.html  classhue4cpp_1_1BridgeNotReachableException.html  classhue4cpp_1_1BridgeNotReachableException.js  classhue4cpp_1_1Bridge_1_1Impl-members.html  classhue4cpp_1_1Bridge_1_1Impl.html  classhue4cpp_1_1Bridge_1_1Impl.js  (+320 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+76 more)
examples/: CMakeLists.txt  INTERACTIVE_DEMO_GUIDE.md  SAMPLE_SESSION.md  authentication.cpp  basic_control.cpp  color_control.cpp  device_listing.cpp  discovery.cpp  http_request_example.cpp  interactive_demo.cpp  performance_benchmark.cpp  rename_demo.cpp  sensor_monitoring.cpp  state_monitoring.cpp
include/hue4cpp/: bridge.h  color_utils.h  device.h  exceptions.h  http_client.h  hue4cpp.h  json_utils.h  light.h  sensor.h  sensors.h  sse_client.h  state.h  types.h
include/hue4cpp/sensors/: bell_button_sensor.h  button_sensor.h  camera_motion_sensor.h  geolocation_sensor.h  light_level_sensor.h  motion_sensor.h  relative_rotary_sensor.h  sensor_base.h  tamper_sensor.h  temperature_sensor.h
overlay-ports/reactivelitepp/: portfile.cmake  usage  vcpkg.json
src/: CMakeLists.txt  bridge.cpp  color_utils.cpp  device.cpp  discovery.cpp  http_client.cpp  json_utils.cpp  light.cpp  sensor.cpp  sensor.cpp.old  sse_client.cpp  state.cpp
src/sensors/: bell_button_sensor.cpp  button_sensor.cpp  camera_motion_sensor.cpp  geolocation_sensor.cpp  light_level_sensor.cpp  motion_sensor.cpp  relative_rotary_sensor.cpp  sensor_base.cpp  tamper_sensor.cpp  temperature_sensor.cpp
tests/: CMakeLists.txt  bridge_tests.cpp  color_utils_tests.cpp  device_tests.cpp  exceptions_tests.cpp  http_client_tests.cpp  json_utils_tests.cpp  light_tests.cpp  sensor_tests.cpp  sensor_tests.cpp.old  sse_client_tests.cpp  state_tests.cpp
